# Tienc

./: .gitignore  LICENSE.txt  README.md  setup.cfg
src/: tienc.py
tests/: test_tienc.py
