[metadata]
name = Tienc
version = 0.0.1
author = vey11
author_email = matveyosipov03@gmail.com
description = package for encrypting text and images using Hybrid encryption, asymmetric encryption or symmetric encryption.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vey11/Tienc
project_urls =
    Bug Tracker = https://github.com/vey11/Tienc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    cryptography



[options.packages.find]
where = src